# rfid_course_design

./: .mxproject  CMakeLists.txt  CMakePresets.json  README.md  door_lock.ioc
Core/Inc/: FreeRTOSConfig.h  access_config.h  access_control.h  crypto_hash.h  door_hardware.h  door_ui.h  esp32_link.h  i2c_bus.h  keypad.h  main.h  pn532.h  smart_lock_protocol.h  ssd1306.h
Core/Src/: access_config.c  access_control.c  crypto_hash.c  door_hardware.c  door_ui.c  esp32_link.c  i2c_bus.c  keypad.c  main.c  pn532.c  smart_lock_protocol.c  ssd1306.c  stm32f1xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  access_control_test.c
